--- a/papers/linhao/linhao.bib
+++ b/papers/linhao/linhao.bib
@@ -10,7 +10,28 @@
   pages = {94-103},
   crossref = {2012},
   ee = {http://dx.doi.org/10.3233/978-1-61499-080-2-94},
-  file = {:garcia2012real.pdf:PDF}
+  file = {:garcia2012real.pdf:PDF},
+  review = {The title attracts me. Cell phone accelerometer and WiFi to do Activity
+	Recognition.
+	
+	
+	This paper uses recognized Simple Activities(running, walking, resting,
+	sitting, etc. ) and the WiFi location information to do Complex Activities
+	Recognition.  An example is "if walkingis detected as a simple activity
+	and the Wi-Fi yields information that tells us that the user is in
+	a library, then we can classify the whole activity as looking for
+	a book"
+	
+	
+	The idea is OK. But little algorithm, and for the Android WiFi scan
+	problem the paper has a setence "A 
+	
+	delay of 500ms is set between the scans."  This  can be an example
+	to my motivation to measure WiFi scan speed, and point out the wrong
+	multithread WiFi Scanning program.
+	
+	
+	The related work is also OK.}
 }
 
 @INCOLLECTION{brezmes2009activity,
@@ -21,7 +42,13 @@
   publisher = {Springer},
   year = {2009},
   pages = {796--799},
-  file = {:brezmes2009activity.pdf:PDF}
+  file = {:brezmes2009activity.pdf:PDF},
+  review = {Totally a experiment.
+	
+	A human activity recognition software developed using a Nokia N95,
+	and using Python API: aXYZ to obtain the accelerometer's data.
+	
+	Not opensource, and don't know where we can download the software.}
 }
 
 @INPROCEEDINGS{khan2010human,
@@ -33,7 +60,12 @@
   year = {2010},
   pages = {1--6},
   organization = {IEEE},
-  file = {:khan2010human.pdf:PDF}
+  file = {:khan2010human.pdf:PDF},
+  review = {This paper is also consider the varing phone position carried with
+	people. Like this paper "Activity Recognition on an Accelerometer
+	Embedded Mobile Phone with Varying Positions and Orientations". This
+	paper mainly uses KDA(Kernel Discriminant Analysis)  and ANN(Artificial
+	Neural Nets), and the other paper mainly uses SVM.}
 }
 
 @ARTICLE{kwapisz2011activity,
@@ -52,7 +84,7 @@
 	Actually, I don't know why this paper can have 203 citations at 2013-9-8.
 	The method used or the result getted in this paper is not that superising.
 	I find this paper because I searched the google scholar using "activity
-	recognition phone", reading it because of relevant ,  the 203 citations
+	recognition phone", reading it because of relevant , the 203 citations
 	and the famous of SIGKDD.
 	
 	
@@ -61,7 +93,7 @@
 	1. The cellphone is fixed in usr's front packet.
 	
 	2. The paper said " One contribution is the data that we have collected
-	and continue to collect, which we plan  to make public in the future.
+	and continue to collect, which we plan to make public in the future.
 	" But I can find no link of website in this paper.
 	
 	3. Is the WISDM project metioned in this paper open sourced?}
@@ -77,7 +109,9 @@
   pages = {140--150},
   number = {9},
   file = {:lane2010survey.pdf:PDF},
-  publisher = {IEEE}
+  publisher = {IEEE},
+  review = {In the abstract " In this article we survey existing mobile phone
+	sensing algorithms, applications, and systems." is attractive.}
 }
 
 @INPROCEEDINGS{sankar2012capturing,
@@ -88,7 +122,8 @@
   year = {2012},
   pages = {403--412},
   organization = {ACM},
-  file = {:sankar2012capturing.pdf:PDF}
+  file = {:sankar2012capturing.pdf:PDF},
+  review = {The topic  indoor floor plan reconstruction using smartphones is attractive.}
 }
 
 @INCOLLECTION{sun2010activity,
@@ -99,7 +134,10 @@
   publisher = {Springer},
   year = {2010},
   pages = {548--562},
-  file = {:sun2010activity.pdf:PDF}
+  file = {:sun2010activity.pdf:PDF},
+  review = {In the abstract," this paper intends to recognize the physical activities
+	in the natural setting where the mobile phone¡¯s position and orientation
+	are varying" is attractive.}
 }
 
 @INPROCEEDINGS{yang2009toward,
@@ -112,5 +150,18 @@
   pages = {1--10},
   organization = {ACM},
   file = {:yang2009toward.pdf:PDF}
+}
+
+@INPROCEEDINGS{zhang2012motion,
+  author = {Zhang, Mi and Sawchuk, Alexander A},
+  title = {Motion primitive-based human activity recognition using a bag-of-features
+	approach},
+  booktitle = {Proceedings of the 2nd ACM SIGHIT International Health Informatics
+	Symposium},
+  year = {2012},
+  pages = {631--640},
+  organization = {ACM},
+  file = {:zhang2012motion.pdf:PDF},
+  review = {Bag-of-Features approach looks nice.}
 }
 
