--- a/papers/shijianhua/shijianhua.bib
+++ b/papers/shijianhua/shijianhua.bib
@@ -12,6 +12,17 @@
   publisher = {ACM}
 }
 
+@INPROCEEDINGS{trung2012inertial,
+  author = {Trung, Ngo Thanh and Makihara, Yasushi and Nagahara, Hajime and Mukaigawa,
+	Yasuhiro and Yagi, Yasushi},
+  title = {Inertial-sensor-based walking action recognition using robust step
+	detection and inter-class relationships},
+  booktitle = {Pattern Recognition (ICPR), 2012 21st International Conference on},
+  year = {2012},
+  pages = {3811--3814},
+  organization = {IEEE}
+}
+
 @INPROCEEDINGS{yang2009toward,
   author = {Yang, Jun},
   title = {Toward physical activity diary: motion recognition using simple acceleration
