linhao add some papers, bui2008hidden, duong2005activity, duong2009efficient, kose2012online, lester2005hybrid, liao2006location, liao2007hierarchical,stiefmeier2007gestures,zhang2012motion,zheng2010collaborative; zheng2010collaborative is one of the kind of papers using GPS location and activity recognition to do freinds recommend

--- a/papers/linhao/linhao.bib
+++ b/papers/linhao/linhao.bib
@@ -51,6 +51,43 @@
 	Not opensource, and don't know where we can download the software.}
 }
 
+@INPROCEEDINGS{bui2008hidden,
+  author = {Bui, Hung Hai and Phung, Dinh Q and Venkatesh, Svetha and Phan, Hai},
+  title = {The Hidden Permutation Model and Location-Based Activity Recognition.},
+  booktitle = {AAAI},
+  year = {2008},
+  volume = {8},
+  pages = {1345--1350}
+}
+
+@ARTICLE{duong2009efficient,
+  author = {Duong, Thi and Phung, Dinh and Bui, Hung and Venkatesh, Svetha},
+  title = {Efficient duration and hierarchical modeling for human activity recognition},
+  journal = {Artificial Intelligence},
+  year = {2009},
+  volume = {173},
+  pages = {830--856},
+  number = {7},
+  publisher = {Elsevier}
+}
+
+@INPROCEEDINGS{duong2005activity,
+  author = {Duong, Thi V and Bui, Hung Hai and Phung, Dinh Q and Venkatesh, Svetha},
+  title = {Activity recognition and abnormality detection with the switching
+	hidden semi-markov model},
+  booktitle = {Computer Vision and Pattern Recognition, 2005. CVPR 2005. IEEE Computer
+	Society Conference on},
+  year = {2005},
+  volume = {1},
+  pages = {838--845},
+  organization = {IEEE},
+  file = {:duong2005activity.pdf:PDF},
+  review = {The Duration model in this paper is attractive.
+	
+	
+	From the Fig. 4, the segmentation of activities is very accrancy.}
+}
+
 @INPROCEEDINGS{khan2010human,
   author = {Khan, Adil Mehmood and Lee, Y-K and Lee, SY and Kim, T-S},
   title = {Human activity recognition via an accelerometer-enabled-smartphone
@@ -66,6 +103,15 @@
 	Embedded Mobile Phone with Varying Positions and Orientations". This
 	paper mainly uses KDA(Kernel Discriminant Analysis) and ANN(Artificial
 	Neural Nets), and the other paper mainly uses SVM.}
+}
+
+@INPROCEEDINGS{kose2012online,
+  author = {Kose, Mustafa and Incel, Ozlem Durmaz and Ersoy, Cem},
+  title = {Online human activity recognition on smart phones},
+  booktitle = {Workshop on mobile sensing: from smartphones and wearables to big
+	data (colocated with IPSN)},
+  year = {2012},
+  pages = {11--15}
 }
 
 @ARTICLE{kwapisz2011activity,
@@ -114,6 +160,35 @@
 	sensing algorithms, applications, and systems." is attractive.}
 }
 
+@INPROCEEDINGS{lester2005hybrid,
+  author = {Lester, Jonathan and Choudhury, Tanzeem and Kern, Nicky and Borriello,
+	Gaetano and Hannaford, Blake},
+  title = {A Hybrid Discriminative/Generative Approach for Modeling Human Activities.},
+  booktitle = {IJCAI},
+  year = {2005},
+  volume = {5},
+  pages = {766--772},
+  file = {:lester2005hybrid.pdf:PDF},
+  review = {"Feature Selection and Activity Classification using Boosted Decision
+	Stumps" looks attractive.}
+}
+
+@PHDTHESIS{liao2006location,
+  author = {Liao, Lin},
+  title = {Location-based activity recognition},
+  school = {University of Washington},
+  year = {2006}
+}
+
+@INCOLLECTION{liao2007hierarchical,
+  author = {Liao, Lin and Fox, Dieter and Kautz, Henry},
+  title = {Hierarchical conditional random fields for GPS-based activity recognition},
+  booktitle = {Robotics Research},
+  publisher = {Springer},
+  year = {2007},
+  pages = {487--506}
+}
+
 @INPROCEEDINGS{plotz2011feature,
   author = {Pl{\"o}tz, Thomas and Hammerla, Nils Y and Olivier, Patrick},
   title = {Feature learning for activity recognition in ubiquitous computing},
@@ -155,6 +230,26 @@
   organization = {ACM},
   file = {:sankar2012capturing.pdf:PDF},
   review = {The topic indoor floor plan reconstruction using smartphones is attractive.}
+}
+
+@INPROCEEDINGS{stiefmeier2007gestures,
+  author = {Stiefmeier, Thomas and Roggen, Daniel and Tr{\"o}ster, Gerhard},
+  title = {Gestures are strings: efficient online gesture spotting and classification
+	using string matching},
+  booktitle = {Proceedings of the ICST 2nd international conference on Body area
+	networks},
+  year = {2007},
+  pages = {16},
+  organization = {ICST (Institute for Computer Sciences, Social-Informatics and Telecommunications
+	Engineering)},
+  file = {:stiefmeier2007gestures.pdf:PDF},
+  owner = {lin hao},
+  review = {This paper convert the gesture motion to string.
+	
+	
+	this paper makes me know what is edit distance. and let me know how
+	to convert the gesture motion to string.},
+  timestamp = {2013.09.12}
 }
 
 @INCOLLECTION{sun2010activity,
@@ -280,5 +375,15 @@
 	3.CMU Multi-Modal Activity Database (CMU-MMAC) : http://kitchen.cs.cmu.edu/
 	
 	4.OPPORTUNITY Dataset : http://archive.ics.uci.edu/ml/datasets/OPPORTUNITY+Activity+Recognition}
+}
+
+@INPROCEEDINGS{zheng2010collaborative,
+  author = {Zheng, Vincent W and Zheng, Yu and Xie, Xing and Yang, Qiang},
+  title = {Collaborative location and activity recommendations with GPS history
+	data},
+  booktitle = {Proceedings of the 19th international conference on World wide web},
+  year = {2010},
+  pages = {1029--1038},
+  organization = {ACM}
 }
 
