linhao read some paper and write today's daily_report

--- a/papers/linhao/linhao.bib
+++ b/papers/linhao/linhao.bib
@@ -55,7 +55,13 @@
   publisher = {Springer},
   year = {2004},
   pages = {1--17},
+  file = {:bao2004activity.pdf:PDF},
   owner = {hao},
+  review = {Different sensor placed at different position.
+	
+	
+	Using "Decision Table ,IBL, C4.5, Naive Bayes", and recognizing 20
+	activities.},
   timestamp = {2013.09.13}
 }
 
@@ -122,8 +128,15 @@
   volume = {14},
   pages = {82--91},
   number = {1},
+  file = {:gyHorbiro2009activity.pdf:PDF},
   owner = {lin hao},
   publisher = {Springer},
+  review = {Using "decision table, instance-based learning, C4.5 decision tree,
+	and naive Bayes classifiers" to recognize 6 activities.
+	
+	
+	Using one smartphone (Nokia 6630) and  measure the power consumption
+	of it.},
   timestamp = {2013.09.13}
 }
 
@@ -236,7 +249,12 @@
   volume = {33},
   pages = {197--204},
   number = {2},
+  file = {:luvstrek2009fall.pdf:PDF},
   owner = {lin hao},
+  review = {This paper uses 8 Machine Learning Algorithms to do training "C4.5
+	decision trees, RIPPER decision rules, Naive Bayes, 3-Nearest Neighbors,
+	Support Vector Machine  (SVM), Random Forest, Bagging and Adaboost
+	M1 boosting."},
   timestamp = {2013.09.13}
 }
 
@@ -247,7 +265,21 @@
   booktitle = {9th. IT \& T Conference},
   year = {2009},
   pages = {11},
+  file = {:maguire2009comparison.pdf:PDF},
   owner = {lin hao},
+  review = {Although this paper mentioned that "The author wrote a Java class
+	using the Weka API (LabelGenerator.java)".
+	
+	
+	But I can't find some opensource dataset and codes, relevant to this
+	paper.
+	
+	
+	This paper also mentions a paper "On-body activity recognition in
+	a dynamic sensor network" that "examined
+	
+	seven office worker activities such as drinking water and using a
+	mouse via accelerometer and light sensor data."},
   timestamp = {2013.09.13}
 }
 
@@ -262,6 +294,18 @@
   pages = {4--pp},
   organization = {IEEE},
   owner = {lin hao},
+  review = {Using a eWatch to do activity recognition.
+	
+	
+	The Correlation based Feature Selection (CFS) method from the WEKA
+	toolkit was used to find feature sets.
+	
+	
+	Just like "mean,rms,std,var,mad,hist,prc,iqr,zcr,mcr..."
+	
+	
+	They also "placed our sensor hardware on the left wrist, belt, necklace,
+	in the right trouser pocket, shirt pocket, and bag."},
   timestamp = {2013.09.13}
 }
 
@@ -282,7 +326,13 @@
   booktitle = {AAAI},
   year = {2005},
   pages = {1541--1546},
+  file = {:ravi2005activity.pdf:PDF},
   owner = {lin hao},
+  review = {This paper using base-level "Decision Tables, Decision Trees (C4.5),
+	K-nearest neighbors, SVM, Naive Bayes" in WEKA  and also "a near
+	exhaustive set of classifiers: Boosting, Bagging, Plurality Voting,
+	Stacking with Ordinary-Decision trees (ODTs) and Stacking with Meta-Decision
+	trees (MDTs)." to recognize eight activities.},
   timestamp = {2013.09.13}
 }
 
