linhao read some papers and write today's report

--- a/papers/linhao/linhao.bib
+++ b/papers/linhao/linhao.bib
@@ -99,7 +99,8 @@
   booktitle = {AAAI},
   year = {2008},
   volume = {8},
-  pages = {1345--1350}
+  pages = {1345--1350},
+  file = {:bui2008hidden.pdf:PDF}
 }
 
 @INPROCEEDINGS{dernbach2012simple,
@@ -111,6 +112,7 @@
   year = {2012},
   pages = {214--221},
   organization = {IEEE},
+  file = {:dernbach2012simple.pdf:PDF},
   owner = {lin hao},
   timestamp = {2013.09.17}
 }
@@ -123,6 +125,7 @@
   volume = {173},
   pages = {830--856},
   number = {7},
+  file = {:duong2009efficient.pdf:PDF},
   publisher = {Elsevier}
 }
 
@@ -174,6 +177,7 @@
   volume = {93},
   pages = {1379--1383},
   number = {7},
+  file = {:han2010implementation.pdf:PDF},
   owner = {lin hao},
   publisher = {The Institute of Electronics, Information and Communication Engineers},
   review = {There are two major differences between human activity recognition
@@ -204,7 +208,8 @@
   booktitle = {Workshop on mobile sensing: from smartphones and wearables to big
 	data (colocated with IPSN)},
   year = {2012},
-  pages = {11--15}
+  pages = {11--15},
+  file = {:kose2012online.pdf:PDF}
 }
 
 @INPROCEEDINGS{krishnan2008analysis,
@@ -216,6 +221,7 @@
   year = {2008},
   pages = {3337--3340},
   organization = {IEEE},
+  file = {:krishnan2008analysis.pdf:PDF},
   owner = {lin hao},
   timestamp = {2013.09.17}
 }
@@ -283,7 +289,8 @@
   author = {Liao, Lin},
   title = {Location-based activity recognition},
   school = {University of Washington},
-  year = {2006}
+  year = {2006},
+  file = {:liao2006location.pdf:PDF}
 }
 
 @INCOLLECTION{liao2007hierarchical,
@@ -292,7 +299,8 @@
   booktitle = {Robotics Research},
   publisher = {Springer},
   year = {2007},
-  pages = {487--506}
+  pages = {487--506},
+  file = {:liao2007hierarchical.pdf:PDF}
 }
 
 @INPROCEEDINGS{long2009single,
@@ -303,6 +311,7 @@
   year = {2009},
   pages = {6107--6110},
   organization = {IEEE},
+  file = {:long2009single.pdf:PDF},
   owner = {lin hao},
   timestamp = {2013.09.17}
 }
@@ -359,6 +368,7 @@
   year = {2006},
   pages = {4--pp},
   organization = {IEEE},
+  file = {:maurer2006activity.pdf:PDF},
   owner = {lin hao},
   review = {Using a eWatch to do activity recognition.
 	
@@ -382,7 +392,11 @@
 	Artificial Intelligence-Volume Volume Two},
   year = {2011},
   pages = {1729--1734},
-  organization = {AAAI Press}
+  organization = {AAAI Press},
+  file = {:plotz2011feature.pdf:PDF},
+  review = {This paper uses the following 4 public activity datasets:1.Ambient
+	Kitchen 1.0 (AK), 2.Darmstadt Daily Routines, 3.Skoda Mini Checkpoint,
+	4.Opportunity}
 }
 
 @ARTICLE{pober2006development,
@@ -395,6 +409,7 @@
   volume = {38},
   pages = {1626},
   number = {9},
+  file = {:pober2006development.pdf:PDF},
   owner = {lin hao},
   publisher = {WILLIAMS \& WILKINS},
   timestamp = {2013.09.17}
@@ -426,6 +441,7 @@
   volume = {27},
   pages = {1082--1105},
   number = {2},
+  file = {:rokicki2013diameter.pdf:PDF},
   publisher = {SIAM},
   review = {I see that "Twenty-Six Moves Suffice for Rubik's Cube" is most referenced
 	in the Rubik's Cube problem, I am shocked.
@@ -519,6 +535,7 @@
   volume = {28},
   pages = {1553--1567},
   number = {10},
+  file = {:ward2006activity.pdf:PDF},
   owner = {lin hao},
   publisher = {IEEE},
   timestamp = {2013.09.17}
@@ -555,6 +572,7 @@
   year = {2012},
   pages = {2034--2041},
   organization = {IEEE},
+  file = {:yang2012online.pdf:PDF},
   owner = {lin hao},
   review = {This paper looks difficult, I haven't read it in detail, just take
 	a look.},
@@ -632,6 +650,7 @@
   booktitle = {Proceedings of the 19th international conference on World wide web},
   year = {2010},
   pages = {1029--1038},
-  organization = {ACM}
+  organization = {ACM},
+  file = {:zheng2010collaborative.pdf:PDF}
 }
 
