linhao read more papers

--- a/papers/linhao/linhao.bib
+++ b/papers/linhao/linhao.bib
@@ -1,6 +1,16 @@
 % This file was created with JabRef 2.9.2.
 % Encoding: GBK
 
+@INPROCEEDINGS{dean2004mapreduce,
+  author = {Jeffrey Dean and Sanjay Ghemawat},
+  title = {MapReduce: Simplified Data Processing on Large Clusters.},
+  booktitle = {OSDI},
+  year = {2004},
+  pages = {137-150},
+  crossref = {2004},
+  ee = {http://www.usenix.org/events/osdi04/tech/dean.html}
+}
+
 @INPROCEEDINGS{garcia2012real,
   author = {Enrique A. Garcia and Ram¨®n F. Brena},
   title = {Real Time Activity Recognition Using a Cell Phone's Accelerometer
