--- a/papers/zhangyi/zhangyi.bib
+++ b/papers/zhangyi/zhangyi.bib
@@ -13,3 +13,11 @@
   review = {iiii}
 }
 
+@ARTICLE{,
+  author = {Youssef M, Agrawala A. The Horus WLAN location determination system[C]//Proceedings
+	of the 3rd international conference on Mobile systems, applications,
+	and services. ACM, 2005: 205-218.},
+  owner = {Administrator},
+  timestamp = {2013.09.23}
+}
+
