updated zhangyi's daily_report

--- a/daily_report/zhangyi/diss.tex
+++ b/daily_report/zhangyi/diss.tex
@@ -58,9 +58,9 @@
 
 % 中文封面内容(关注内容而不是形式)
 \title{工作笔记}
-\author{林\quad{}浩}
+\author{张\quad{}熠}
 \advisor{梁久祯\quad{}教授}
-\degree{硕士}
+\degree{本科}
 \defenddate{2013年6月}
 \school{江南大学}
 \institute{计算机系}
@@ -119,6 +119,7 @@
 %% 各章正文内容
 \include{body/day2013-09-09}
 \include{body/day2013-09-11}
+\include{body/day2014-02-23}
 
 
 
